--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Projects</title>
+    <title>SMProject</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -13,12 +13,12 @@
 <body>
     <div class="wrapper">
         <nav class="navbar">
-            <a href="index.html" class="navbar-brand">RaoIndyt's Portfolio</a>
+            <a href="index.html" class="navbar-brand">SMPortfolio</a>
         </nav>
         <div class="container">
             <header>
-                <h1>My Projects</h1>
-                <p>A collection of my work and personal projects.</p>
+                <h1>Projects</h1>
+                <p>A collection personal projects.</p>
             </header>
             <main class="project-grid">
                 <a href="neonfy.html" class="project-card">
@@ -41,9 +41,6 @@
                 </a>
             </main>
         </div>
-        <footer class="footer">
-            <p>&copy; 2024 RaoIndyt. All Rights Reserved.</p>
-        </footer>
     </div>
 </body>
 </html>
