--- a/neonfy.html
+++ b/neonfy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neonfy</title>
+    <title>Neonfry</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
     <div class="wrapper">
         <nav class="navbar">
-            <a href="index.html" class="navbar-brand">RaoIndyt's Portfolio</a>
+            <a href="index.html" class="navbar-brand">SMProject/a>
         </nav>
         <div class="container neon-theme">
             <header>
@@ -35,9 +35,6 @@
                 </a>
             </main>
         </div>
-        <footer class="footer">
-            <p>&copy; 2024 RaoIndyt. All Rights Reserved.</p>
-        </footer>
     </div>
 </body>
 </html>
