--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <i class="fas fa-music"></i>
                     </div>
                     <div class="project-content">
-                        <h2>Neonfy</h2>
+                        <h2>Neonfry</h2>
                         <p>A stylish, minimalistic music player.</p>
                     </div>
                 </a>
