--- a/neonfy.html
+++ b/neonfy.html
@@ -25,7 +25,7 @@
                     <i class="fas fa-arrow-left"></i>
                     <span>Back</span>
                 </a>
-                <a href="neonfy_installer.zip" class="btn btn-primary">
+                <a href="Neonfry Player Setup 1.0.0.exe" class="btn btn-primary">
                     <i class="fas fa-download"></i>
                     <span>Download</span>
                 </a>
